--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -927,4 +927,6 @@
     <string name="rewards_facebook_handler">फेसबुक कनेक्ट करा</string>
     <string name="add_youtube">YouTube चॅनेल दुवा जोडा</string>
     <string name="add_twitter">ट्विटर हँडल जोडा</string>
+    <string name="language">भाषा</string>
+
 </resources>
