--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -929,5 +929,7 @@
     <string name="rewards_instagram_handler">இன்ஸ்டாக்ராம் ஹான்டிலை சேர்க்கவும்</string>
     <string name="rewards_facebook_handler">"ஃபேஸ்புக்கை இணைக்கவும் "</string>
     <string name="add_youtube">யூட்யூப் சேனல் லிங்க்கை சேர்க்கவும்</string>
+    <string name="language">LANGUAGE</string>
+
     <string name="add_twitter">ட்விட்டர் ஹான்டிலை சேர்க்கவும்</string>
 </resources>
