notification badge issue and other small changes

--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -975,5 +975,6 @@
     <string name="add_youtube">യു ട്യൂബ് ചാനൽ ലിങ്ക് ചേർക്കൂ</string>
     <string name="add_twitter">ട്വിറ്റർ ഹാൻഡിൽ ചേർക്കൂ</string>
     <string name="language">LANGUAGE</string>
+    <string name="about_video">ഇതിനെക്കുറിച്ച്</string>
 
 </resources>
