--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -928,5 +928,6 @@
     <string name="add_youtube">YouTube चॅनेल दुवा जोडा</string>
     <string name="add_twitter">ट्विटर हँडल जोडा</string>
     <string name="language">भाषा</string>
+    <string name="about_video">विषयी</string>
 
 </resources>
