--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -932,4 +932,5 @@
     <string name="language">LANGUAGE</string>
 
     <string name="add_twitter">ட்விட்டர் ஹான்டிலை சேர்க்கவும்</string>
+    <string name="about_video">இதைப் பற்றி</string>
 </resources>
