--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -925,5 +925,6 @@
     <string name="add_twitter">টুইটার হ্যান্ডেল যোগ করুন</string>
 
     <string name="language">ভাষা</string>
+    <string name="about_video">চ্যালেঞ্জ সংক্রান্ত তথ্য</string>
 
 </resources>
