--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -941,7 +941,7 @@
     <string name="add_youtube">यूट्यूब चैनल का लिंक जोड़ें</string>
     <string name="add_twitter">ट्विटर हैंडल डालें</string>
     <string name="language">भाषा</string>
-
+    <string name="about_video">चैलेंज के बारे में</string>
 
 
 </resources>
