--- a/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-te/strings.xml
@@ -925,5 +925,6 @@
     <string name="add_twitter">Twitter హ్యాండిల్ జోడించండి</string>
 
     <string name="language">LANGUAGE</string>
+    <string name="about_video">విషయం</string>
 
 </resources>
