--- a/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ml/strings.xml
@@ -976,5 +976,6 @@
     <string name="add_twitter">ട്വിറ്റർ ഹാൻഡിൽ ചേർക്കൂ</string>
     <string name="language">LANGUAGE</string>
     <string name="about_video">ഇതിനെക്കുറിച്ച്</string>
+    <string name="myprofile.section.mom_bottom_label">അമ്മമാരുടെ വിലോഗുകൾ</string>
 
 </resources>
