--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -942,6 +942,7 @@
     <string name="add_twitter">ट्विटर हैंडल डालें</string>
     <string name="language">भाषा</string>
     <string name="about_video">चैलेंज के बारे में</string>
+    <string name="myprofile.section.mom_bottom_label">मोम व्लॉग</string>
 
 
 </resources>
