--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -976,5 +976,6 @@
     <string name="add_twitter">ಟ್ವಿಟರ್‍ ಹ್ಯಾಂಡಲ್‍ ಗೆ ಸೇರಿಸಿ</string>
     <string name="language">LANGUAGE</string>
     <string name="about_video">ಸುಮಾರು</string>
+    <string name="myprofile.section.mom_bottom_label">ಮಾಮ್ ವ್ಲೋಗ್ಸ್</string>
 
 </resources>
