--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -933,4 +933,5 @@
 
     <string name="add_twitter">ட்விட்டர் ஹான்டிலை சேர்க்கவும்</string>
     <string name="about_video">இதைப் பற்றி</string>
+    <string name="myprofile.section.mom_bottom_label">மாம் விலாக்ஸ்</string>
 </resources>
