--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -941,6 +941,8 @@
     <string name="add_youtube">यूट्यूब चैनल का लिंक जोड़ें</string>
     <string name="add_twitter">ट्विटर हैंडल डालें</string>
     <string name="language">भाषा</string>
+    <string name="group_comment_start_type_here_text">Start Typing</string>
+
 
 
 
