--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">மாம்ஸ்ப்ரெஸ்ஸோ</string>
     <string name="unknown_person">தெரியாத</string>
     <string name="resend_email">ஈ-மெயிலை மீண்டும் அனுப்பவும்</string>
+    <string name="group_comment_start_type_here_text">Start Typing</string>
+
 
     <string name="write_review_prompt">நீங்கள் எதை விமர்சனம் செய்ய விரும்புகிறீர்கள்?</string>
 
