--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1077,6 +1077,7 @@
     <string name="group_add_comment_text">ADD COMMENT</string>
     <string name="group_invite_text">Invite</string>
     <string name="group_comment_type_here_text">Type here</string>
+    <string name="group_comment_start_type_here_text">Start typing</string>
     <string name="group_comment_be_the_first_text">Be the first one to comment</string>
 
     //tooltip groups
