--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -947,6 +947,7 @@
     <string name="about_video">চ্যালেঞ্জ সংক্রান্ত তথ্য</string>
     <string name="myprofile.section.mom_bottom_label">"মায়েদের ভিডিও ব্লগস "</string>
     <string name="all_videos.toolbar.title.homepage">Videos</string>
-
+    <string name="moderation_message">100WordStory under moderation.\n
+Thank you! We will be reviewing your story. You can expect to hear from us within the next 48 working hours. Meanwhile, you can still share your story with your friends!</string>
 
 </resources>
