--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -948,7 +948,8 @@
     <string name="about_video">चैलेंज के बारे में</string>
     <string name="myprofile.section.mom_bottom_label">मोम व्लॉग</string>
     <string name="all_videos.toolbar.title.homepage">Videos</string>
-
+    <string name="moderation_message">100WordStory under moderation.\n
+Thank you! We will be reviewing your story. You can expect to hear from us within the next 48 working hours. Meanwhile, you can still share your story with your friends!</string>
 
 
 
