--- a/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-kn/strings.xml
@@ -982,6 +982,7 @@
     <string name="myprofile.section.mom_bottom_label">ಮಾಮ್ ವ್ಲೋಗ್ಸ್</string>
     <string name="all_videos.toolbar.title.homepage">Videos</string>
 
-
+    <string name="moderation_message">100WordStory under moderation.\n
+Thank you! We will be reviewing your story. You can expect to hear from us within the next 48 working hours. Meanwhile, you can still share your story with your friends!</string>
 
 </resources>
