--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1102,6 +1102,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     //rewardsCampaignString
     <string name="reward_campaign_add_proof">ADD PROOF</string>
+    <string name="select_payment_method">SELECT YOUR \n PREFERRED METHOD OF PAYMENT</string>
 
 
 </resources>
