--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1111,6 +1111,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="campaign_details_applied">APPLIED</string>
     <string name="campaign_details_expired">EXPIRED</string>
     <string name="campaign_details_completed">COMPLETED</string>
+    <string name="campaign_details_rejected">REJECTED</string>
     <string name="end_date">End Date</string>
     <string name="start_date">Start Date</string>
 
