--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1118,7 +1118,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     <string name="label_campaign_expired">This campaign is now closed.</string>
     <string name="label_campaign_not_eligible">Share the campaign with your friends.</string>
-    <string name="label_campaign_full">Share Momspresso Rewards with your friends.</string>
+    <string name="label_campaign_full">Share Momspresso MyMoney with your friends.</string>
     <string name="label_campaign_open">By clicking on Apply Now, you agree to the Terms &amp; Conditions.</string>
     <string name="label_campaign_applied">We will notify you about your eligibility for the campaign.</string>
     <string name="label_campaign_apply">By clicking on Apply Now, you agree to the Terms &amp; Conditions.</string>
@@ -1137,7 +1137,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="detail_bottom_apply_now">APPLY NOW</string>
     <string name="detail_bottom_applied">APPLIED</string>
     <string name="detail_bottom_share">SHARE</string>
-    <string name="detail_bottom_share_momspresso_reward">SHARE MOMSPRESSO REWARDS</string>
+    <string name="detail_bottom_share_momspresso_reward">Share MyMoney</string>
     <string name="detail_bottom_view_other">VIEW OTHER CAMPAIGNS</string>
     <string name="detail_bottom_submit_proof">SUBMIT PROOF</string>
 
@@ -1145,5 +1145,11 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     //campaigndetaildialog
     <string name="dialog_based_on_profile">Based on your Profile</string>
     <string name="dialog_you_can_get_reward_of">You can get reward of</string>
+    <string name="campaign_starts_on">Campaign Starts On</string>
+    <string name="campaign_ends_on">Campaign Ends On</string>
+    <string name="view_mymoney">View MyMoney for Campaign</string>
+    <string name="dialog_thanks_for_interest">Thanks for your interest!</string>
+    <string name="dialog_register_for_mymoney">For applying to the campaign, you first need to register for the Momspresso MyMoney.</string>
+    <string name="register_now">REGISTER NOW</string>
 
 </resources>
