--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1043,7 +1043,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="rewards.social.instagram_connected">INSTAGRAM CONNECTED</string>
     <string name="rewards_participate">Participate and earn now by completing your profile!</string>
     <string name="rewards_personal_header">We need this information to get in touch with you</string>
-    <string name="rewards_welcome">Welcome to Momspresso MyMoney!</string>
+    <string name="reward_welcome">Welcome to Momspresso MyMoney!</string>
     <string name="rewards_description">Leading brands host campaigns in the form of surveys, e-commerce reviews, sponsored blogs and others on a regular basis.
        </string>
     <string name="reards.description_secand_text"> We need some information from you to determine your eligibility for these campaigns. Participation in these campaigns involves a monetary benefit and hence Momspresso Rewards.</string>
