--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1106,7 +1106,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     //campaigndetails
     <string name="campaign_details_apply_now">APPLY NOW</string>
-    <string name="campaign_details_submission_open">SUBMISSION OPEN</string>
+    <string name="campaign_details_submission_open">SUBMIT PROOF</string>
     <string name="campaign_details_application_full">APPLICATION FULL</string>
     <string name="campaign_details_applied">APPLIED</string>
     <string name="campaign_details_expired">EXPIRED</string>
@@ -1154,5 +1154,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="register_now">REGISTER NOW</string>
     <string name="apply_refer_code">APPLY REFERRAL CODE</string>
     <string name="apply_code_error">Code already used. Please enter a different one</string>
+    <string name="dialog_congratulations">Congratulations!</string>
+    <string name="dialog_you_can_earn">You can earn</string>
 
 </resources>
