--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1130,7 +1130,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="toast_not_elegible">Sorry, you are not eligible for this campaign.</string>
     <string name="toast_campaign_full">Oops! Entries to this campaign are now closed.</string>
     <string name="toast_campaign_open">Thank you for applying to the campaign.</string>
-    <string name="toast_campaign_applied">Thank you for applying to the campaign.</string>
+    <string name="toast_campaign_applied">Thank you for applying. We will notify once your application is approved.</string>
     <string name="toast_campaign_not_started">Congratulations! Your application is approved.</string>
     <string name="toast_campaign_started">Congratulations! Your application is approved.</string>
     <string name="toast_campaign_reject">Sorry, we have not been able to approve your application.</string>
@@ -1163,7 +1163,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="dialog_congratulations">Congratulations!</string>
     <string name="dialog_you_can_earn">You can earn</string>
     <string name="invite_only_header">This campaign is by invite only.</string>
-    <string name="invite_only_interested">INTERESTED</string>
+    <string name="invite_only_interested">I\'M INTERESTED</string>
     <string name="dialog_invite_only_subtext">Click below to apply for future ‘invite only’ campaigns.</string>
 
 </resources>
