--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1113,6 +1113,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="campaign_details_completed">COMPLETED</string>
     <string name="campaign_details_invite_only">INVITE ONLY</string>
     <string name="campaign_details_rejected">REJECTED</string>
+    <string name="campaign_list_proof_moderation">PROOF SUBMITTED</string>
+    <string name="campaign_list_proof_reject">PROOF REJECTED</string>
     <string name="end_date">End Date</string>
     <string name="start_date">Start Date</string>
     <string name="campaign_details_not_eligible">Not Eligible</string>
@@ -1126,6 +1128,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="label_campaign_completed">Congratulations! Your submission is approved.</string>
     <string name="label_campaign_not_started">Campaign starts on </string>
     <string name="label_campaign_reject">Please explore other campaigns to participate and earn.</string>
+    <string name="label_campaign_proof_moderation">Your proofs are under moderation. To add more, you can click below.</string>
+    <string name="label_campaign_proof_reject">Your proofs were rejected. Please check email for details.To resubmit after corrections, click below.</string>
 
     <string name="toast_not_elegible">Sorry, you are not eligible for this campaign.</string>
     <string name="toast_campaign_full">Oops! Entries to this campaign are now closed.</string>
@@ -1136,6 +1140,8 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="toast_campaign_reject">Sorry, we have not been able to approve your application.</string>
     <string name="toast_campaign_invite">Sorry, this campaign is by invitation only.</string>
     <string name="toast_campaign_invite_thankyou">Thank you, we will get in touch with you.</string>
+    <string name="toast_campaign_proof_moderation">Your proofs are under moderation.</string>
+    <string name="toast_campaign_proof_reject">Your proof was rejected!</string>
 
     <string name="detail_bottom_apply_now">APPLY NOW</string>
     <string name="detail_bottom_applied">APPLIED</string>
