--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1130,19 +1130,19 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
 
     <string name="label_campaign_not_started">Campaign starts on </string>
     <string name="label_campaign_reject">Please explore other campaigns to participate and earn.</string>
-    <string name="label_campaign_proof_moderation">Your proofs are under moderation. To add more, you can click below.</string>
+    <string name="label_campaign_proof_moderation">We will check your submitted proofs within 7 days. To add more, you can click below.</string>
     <string name="label_campaign_proof_reject">Your proofs were rejected. Please check email for details.To resubmit after corrections, click below.</string>
 
     <string name="toast_not_elegible">Sorry, you are not eligible for this campaign.</string>
     <string name="toast_campaign_full">Oops! Entries to this campaign are now closed.</string>
     <string name="toast_campaign_open">Thank you for applying to the campaign.</string>
-    <string name="toast_campaign_applied">On CTA click: Thank you for applying. We will notify you within 7 days on the status of your application.</string>
+    <string name="toast_campaign_applied">Thank you for applying. We will notify you within 7 days on the status of your application.</string>
     <string name="toast_campaign_not_started">Congratulations! Your application is approved. Please wait for campaign to start to submit proofs.</string>
     <string name="toast_campaign_started">Congratulations! Your application is approved.</string>
     <string name="toast_campaign_reject">Sorry, we have not been able to approve your application.</string>
     <string name="toast_campaign_invite">Sorry, this campaign is by invitation only.</string>
     <string name="toast_campaign_invite_thankyou">Thank you, we will get in touch with you.</string>
-    <string name="toast_campaign_proof_moderation">Your proofs are under moderation.</string>
+    <string name="toast_campaign_proof_moderation">We will check your submitted proofs within 7 days. </string>
     <string name="toast_campaign_proof_reject">Your proof was rejected!</string>
 
     <string name="detail_bottom_apply_now">APPLY NOW</string>
