retrofit parsing issue resolved

--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -914,7 +914,7 @@
     <string name="rewards_expected_date">"बच्चे के जन्म की संभावित तिथि "</string>
     <string name="rewards_mobile_number_verified">मोबाइल नंबर वेरीफाई करें।</string>
     <string name="rewards_have_children">क्या आपके बच्चे हैं?</string>
-    <string name="rewards_tab_detail">रिवार्ड्स</string>
+    <string name="rewards_tab_detail">MyMoney</string>
     <string name="rewards_add_child">एक और जोड़ें</string>
     <string name="rewards_kid_detail">बच्चों की डिटेल भरें।</string>
     <string name="rewards_participating_earn_completing_profile">अपने प्रोफाइल को अभी भरें और ईनामी योजना में हिस्सा ले कर लाभ कमाएं !</string>
