--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -1068,7 +1068,7 @@ Thank you! We will be reviewing your story. You can expect to hear from us withi
     <string name="rewards_mobile_number_verified">Mobile number is verified</string>
     <string name="rewards_have_children">Do you have children?</string>
     <string name="rewards_add_child">Add More</string>
-    <string name="rewards_kid_detail">Kid detail</string>
+    <string name="rewards_kid_detail">Child detail</string>
     <string name="app_name">Momspresso</string>
 
 
