onboarding added done

--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -348,6 +348,7 @@
         <item>Enjoy Blogs in any of 8 Languages</item>
         <item>Upload your Mom Vlogs or watch on the go</item>
         <item>With Support Groups, you are not alone</item>
+        <item>Start earning with MyMoney!</item>
     </string-array>
 
     <string name="onboarding.desc_1">Every mom has a story. What\'s yours? Share it in text or video.</string>
