--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -828,7 +828,7 @@
     <string name="email_and_password">EMAIL AND PASSWORD</string>
     <string name="location">LOCATION</string>
     <string name="search">Search Any article or author</string>
-    <string name="new_label">NEW</string>
+    <string name="new_label">புதிய</string>
     <string name="view_profile">view profile</string>
     <string name="choose_video_category">Choose Video Category</string>
     <string name="enter_valid_email">Please enter valid email id</string>
